[gd_scene load_steps=2 format=3 uid="uid://7cqoemegxs2c"]

[ext_resource type="Script" uid="uid://bw0jr4ieeknbt" path="res://objects/boss_touhou/boss_final/attacks/marisa/sc3_1.gd" id="1_1f032"]

[node name="Sc3_Start" type="Node"]
script = ExtResource("1_1f032")
set_target_before_shooting = false
show_warning_line = true
is_new_spell_card = true
next_attack_will_be_new = true
end_spell_card_afterwards = true
player_should_get_pity_afterwards = true
is_spell_card = true
spellcard_name = "Love Sign \"Master Spark\""

[node name="BossRestTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="MasterSparkTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="NoiseBulletTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="MasterSparkInterval" type="Timer" parent="."]
process_mode = 1
one_shot = true
